--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
@@ -1,82 +1,86 @@
-<div *ngIf="dependencies">
-  <ng-container
-    *ngFor="let intentJobsType of [dependencies.intentsToCreate, dependencies.intentsToUpdate]"
-  >
-    <div *ngIf="intentJobsType.length">
-      <h5>
-        The <span *ngIf="intentJobsType.length > 1">{{ intentJobsType.length }}</span> following
-        intent<span *ngIf="intentJobsType.length > 1">s</span>
-        will be
-        <span *ngIf="getJobsType(intentJobsType) == 'creation'"> created </span>
-        <span *ngIf="getJobsType(intentJobsType) == 'update'"> updated </span>
-      </h5>
-      <div class="row">
-        <div
-          *ngFor="let intent of intentJobsType"
-          class="col-12 col-md-6 mb-2 d-flex"
-        >
-          <nb-icon
-            icon="checkmark-outline"
-            status="success"
-            *ngIf="intent.done"
-          ></nb-icon>
-          <div>
-            <strong>{{ intent.data.intentDefinition.name }}</strong>
-            <div>
-              label :
-              <span class="text-muted">
-                {{ intent.data.intentDefinition.label }}
-              </span>
-            </div>
-            <div>
-              category :
-              <span class="text-muted">
-                {{ intent.data.intentDefinition.category }}
-              </span>
-            </div>
-            <div *ngIf="intent.data.intentDefinition.description">
-              description :
-              <span class="text-muted">
-                {{ intent.data.intentDefinition.description }}
-              </span>
+<nb-card>
+  <nb-card-body>
+    <div *ngIf="dependencies">
+      <ng-container
+        *ngFor="let intentJobsType of [dependencies.intentsToCreate, dependencies.intentsToUpdate]"
+      >
+        <div *ngIf="intentJobsType.length">
+          <h5>
+            The <span *ngIf="intentJobsType.length > 1">{{ intentJobsType.length }}</span> following
+            intent<span *ngIf="intentJobsType.length > 1">s</span>
+            will be
+            <span *ngIf="getJobsType(intentJobsType) == 'creation'"> created </span>
+            <span *ngIf="getJobsType(intentJobsType) == 'update'"> updated </span>
+          </h5>
+          <div class="row">
+            <div
+              *ngFor="let intent of intentJobsType"
+              class="col-12 col-md-6 mb-2 d-flex break-word"
+            >
+              <nb-icon
+                icon="checkmark-outline"
+                status="success"
+                *ngIf="intent.done"
+              ></nb-icon>
+              <div>
+                <strong>{{ intent.data.intentDefinition.name }}</strong>
+                <div>
+                  label :
+                  <span class="text-muted">
+                    {{ intent.data.intentDefinition.label }}
+                  </span>
+                </div>
+                <div>
+                  category :
+                  <span class="text-muted">
+                    {{ intent.data.intentDefinition.category }}
+                  </span>
+                </div>
+                <div *ngIf="intent.data.intentDefinition.description">
+                  description :
+                  <span class="text-muted">
+                    {{ intent.data.intentDefinition.description }}
+                  </span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </ng-container>
+      </ng-container>
 
-  <div
-    *ngIf="dependencies.answersToCreate.length"
-    class="mt-3"
-  >
-    <h5>The {{ dependencies.answersToCreate.length }} following answers will be created</h5>
-    <div class="row">
       <div
-        *ngFor="let answer of dependencies.answersToCreate"
-        class="col-12 col-md-6 mb-2 d-flex"
+        *ngIf="dependencies.answersToCreate.length"
+        class="mt-3"
       >
-        <nb-icon
-          icon="checkmark-outline"
-          status="success"
-          *ngIf="answer.done"
-        ></nb-icon>
-        {{ answer.data.tickActionDefinition.answer }}
+        <h5>The {{ dependencies.answersToCreate.length }} following answers will be created</h5>
+        <div class="row">
+          <div
+            *ngFor="let answer of dependencies.answersToCreate"
+            class="col-12 col-md-6 mb-2 d-flex break-word"
+          >
+            <nb-icon
+              icon="checkmark-outline"
+              status="success"
+              *ngIf="answer.done"
+            ></nb-icon>
+            {{ answer.data.tickActionDefinition.answer }}
+          </div>
+        </div>
+      </div>
+
+      <div class="text-center mt-3">
+        <button
+          *ngIf="!processingDependencies"
+          nbButton
+          status="danger"
+          class="ml-2"
+          (click)="processDependencies()"
+        >
+          Publish scenario
+        </button>
       </div>
     </div>
-  </div>
-
-  <div class="text-center mt-3">
-    <button
-      *ngIf="!processingDependencies"
-      nbButton
-      status="danger"
-      class="ml-2"
-      (click)="processDependencies()"
-    >
-      Publish scenario
-    </button>
-  </div>
-</div>
+  </nb-card-body>
+</nb-card>
 
 <!-- <pre *ngIf="tickStoryJson">{{ tickStoryJson }}</pre> -->
