--- a/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
+++ b/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
@@ -32,29 +32,27 @@
       </div>
     </pre>
   </nb-card-body>
-  <nb-card-footer>
-    <footer class="d-flex flex-wrap justify-content-end gap-1 mb-2">
-      <nb-select
-        placeholder="Change spacing"
-        nbTooltip="Change indent"
-        [(ngModel)]="spacing"
-        (ngModelChange)="spacingChange()"
+  <nb-card-footer class="d-flex flex-wrap justify-content-end gap-1">
+    <nb-select
+      placeholder="Change spacing"
+      nbTooltip="Change indent"
+      [(ngModel)]="spacing"
+      (ngModelChange)="spacingChange()"
+    >
+      <nb-option
+        *ngFor="let i of [].constructor(2, 4, 6, 8)"
+        [value]="i"
+        >{{ i }}</nb-option
       >
-        <nb-option
-          *ngFor="let i of [].constructor(2, 4, 6, 8)"
-          [value]="i"
-          >{{ i }}</nb-option
-        >
-      </nb-select>
-      <button
-        nbButton
-        ghost
-        shape="round"
-        nbTooltip="Copy to clipboard"
-        (click)="copyToClipboard()"
-      >
-        <nb-icon icon="copy-outline"></nb-icon>
-      </button>
-    </footer>
+    </nb-select>
+    <button
+      nbButton
+      ghost
+      shape="round"
+      nbTooltip="Copy to clipboard"
+      (click)="copyToClipboard()"
+    >
+      <nb-icon icon="copy-outline"></nb-icon>
+    </button>
   </nb-card-footer>
 </nb-card>
