feat(scenario-production); State machine transitions display

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.html
@@ -109,7 +109,7 @@
         </div>
         <div
           class="pathHandler"
-          [ngStyle]="{ 'top.px': handler.endTop, 'left.px': handler.endLeft }"
+          [ngStyle]="{ 'top.px': handler.transEndTop, 'left.px': handler.transEndLeft }"
           [dndDraggable]="{
             type: 'transitionTarget',
             source: handler.transitionSource,
