--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
@@ -1,4 +1,5 @@
 <div
+  #stateWrapper
   class="stateGroup unselectable"
   [dndDropzone]="getDraggableTypes()"
   [dndDisableIf]="this.state.id === 'root'"
@@ -91,8 +92,7 @@
 
 <div *ngIf="!state.states && hasOutgoingTransitions()">
   <div
-    style="height: 30px; border: 1px solid red"
-    class="position-relative"
+    class="outgoing-transitions-wrapper"
     *ngFor="let transition of state.on | keyvalue"
   >
     <scenario-transition
