--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.scss
@@ -8,7 +8,7 @@
     min-width: 10rem;
     width: fit-content;
 
-    margin-bottom: 20px;
+    margin-top: 20px;
     border-radius: 0.25rem;
 
     .stateGroup-header {
@@ -25,7 +25,7 @@
         position: relative;
       }
       .actions-wrapper {
-        padding: 20px 20px 0 20px;
+        padding: 0 20px 20px 20px;
       }
     }
 
@@ -35,5 +35,10 @@
         background-color: nb-theme(color-basic-transparent-600);
       }
     }
+  }
+
+  .outgoing-transitions-wrapper {
+    position: relative;
+    height: 30px;
   }
 }
