feat(scenario-production): highlight transitions on hover

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.scss
@@ -24,4 +24,7 @@
   //   width: 15px;
   //   background-color: #ccc;
   // }
+  &.hovered {
+    background-color: nb-theme(color-info-hover);
+  }
 }
