feat(scenario-designer): final item attribute set on corresponding actionDefinition. Confirm modal on deletion of item with definition. Fix on removeSmStateById

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
@@ -251,7 +251,8 @@
           *ngIf="
             mode == SCENARIO_MODE.writing &&
             item.from == SCENARIO_ITEM_FROM_BOT &&
-            itemHasNoChildren()
+            itemHasNoChildren() &&
+            !itemHasDefinition()
           "
           class="mt-2"
         >
