refacto(shared): transform canvas directive to component

--- a/bot/admin/web/src/app/shared/canvas/bottom-actions/bottom-actions.component.html
+++ b/bot/admin/web/src/app/shared/canvas/bottom-actions/bottom-actions.component.html
@@ -1,8 +1,17 @@
-<nb-button-group size="small">
+<nb-button-group
+  size="small"
+  status="basic"
+>
+  <button
+    nbButton
+    [nbTooltip]="isFullscreen ? 'Leave fullscreen' : 'Fullscreen'"
+    (click)="fullscreen(!isFullscreen)"
+  >
+    <nb-icon [icon]="isFullscreen ? 'collapse-outline' : 'expand-outline'"></nb-icon>
+  </button>
   <button
     nbButton
     nbTooltip="Zoom out"
-    status="basic"
     (click)="zoom(zoomValue.OUT)"
   >
     <nb-icon icon="minus-outline"></nb-icon>
@@ -10,7 +19,6 @@
   <button
     nbButton
     nbTooltip="Zoom in"
-    status="basic"
     (click)="zoom(zoomValue.IN)"
   >
     <nb-icon icon="plus-outline"></nb-icon>
