--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
@@ -14,6 +14,7 @@
 </div>
 
 <nb-icon
+  *ngIf="!isReadonly"
   class="pointer ml-2 min-width-1em"
   icon="minus-circle-outline"
   nbTooltip="Remove this transition"
