--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
@@ -82,6 +82,7 @@
     <div class="actions-wrapper">
       <scenario-state-group
         *ngFor="let state of state.states | keyvalue"
+        [isReadonly]="isReadonly"
         [state]="state.value"
         [stateMachine]="stateMachine"
         [usedNames]="usedNames"
