--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <div
-  [dndDisableIf]="!(scenario.data.mode === SCENARIO_MODE.writing)"
+  [dndDisableIf]="!(scenario.data.mode === SCENARIO_MODE.writing) || isReadonly"
   [dndDraggable]="draggable.data"
 >
   <div
@@ -40,7 +40,9 @@
       />
       <img
         src="assets/images/scenario-client.svg"
-        *ngIf="item.from != SCENARIO_ITEM_FROM_CLIENT && mode == SCENARIO_MODE.writing"
+        *ngIf="
+          item.from != SCENARIO_ITEM_FROM_CLIENT && mode == SCENARIO_MODE.writing && !isReadonly
+        "
       />
       <div
         class="duplication-count"
@@ -63,7 +65,7 @@
       />
       <img
         src="assets/images/scenario-bot.svg"
-        *ngIf="item.from != SCENARIO_ITEM_FROM_BOT && mode == SCENARIO_MODE.writing"
+        *ngIf="item.from != SCENARIO_ITEM_FROM_BOT && mode == SCENARIO_MODE.writing && !isReadonly"
       />
       <div
         class="duplication-count"
@@ -163,7 +165,8 @@
             *ngIf="
               mode == SCENARIO_MODE.writing &&
               itemCanHaveAnswer() &&
-              item.from == SCENARIO_ITEM_FROM_CLIENT
+              item.from == SCENARIO_ITEM_FROM_CLIENT &&
+              !isReadonly
             "
             (click)="answering()"
             nbTooltip="Add a client intervention"
@@ -182,7 +185,8 @@
             *ngIf="
               mode == SCENARIO_MODE.writing &&
               itemCanHaveAnswer() &&
-              item.from == SCENARIO_ITEM_FROM_BOT
+              item.from == SCENARIO_ITEM_FROM_BOT &&
+              !isReadonly
             "
             (click)="answering()"
             nbTooltip="Add a bot intervention"
@@ -202,7 +206,8 @@
             *ngIf="
               mode == SCENARIO_MODE.casting &&
               item.from == SCENARIO_ITEM_FROM_CLIENT &&
-              item.text?.length
+              item.text?.length &&
+              !isReadonly
             "
             (click)="manageIntent()"
             nbTooltip="Intent infos and edition"
@@ -217,7 +222,8 @@
             *ngIf="
               mode == SCENARIO_MODE.casting &&
               item.from == SCENARIO_ITEM_FROM_BOT &&
-              item.text?.length
+              item.text?.length &&
+              !isReadonly
             "
             (click)="manageAction()"
             nbTooltip="Action infos and edition"
@@ -239,7 +245,9 @@
             nbButton
             size="tiny"
             status="warning"
-            *ngIf="mode == SCENARIO_MODE.writing && item.id > 0 && itemHasNoChildren()"
+            *ngIf="
+              mode == SCENARIO_MODE.writing && item.id > 0 && itemHasNoChildren() && !isReadonly
+            "
             (click)="delete()"
             nbTooltip="Remove this item"
           >
@@ -252,7 +260,8 @@
             mode == SCENARIO_MODE.writing &&
             item.from == SCENARIO_ITEM_FROM_BOT &&
             itemHasNoChildren() &&
-            !itemHasDefinition()
+            !itemHasDefinition() &&
+            !isReadonly
           "
           class="mt-2"
         >
@@ -278,6 +287,7 @@
     <ng-container *ngFor="let childItem of getChildItems()">
       <div class="card-col">
         <scenario-conception-item
+          [isReadonly]="isReadonly"
           [itemId]="childItem.id"
           [parentId]="item.id"
           [scenarioItems]="scenarioItems"
