--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
@@ -66,15 +66,14 @@
                 </span>
               </div>
             </div>
-            <div>
-              <nb-icon
-                icon="trash-2-outline"
-                status="danger"
-                (click)="confirmDeleteContext(context)"
-                class="pointer ml-2"
-                nbTooltip="Delete this context"
-              ></nb-icon>
-            </div>
+            <nb-icon
+              *ngIf="!isReadonly"
+              icon="trash-2-outline"
+              status="danger"
+              (click)="confirmDeleteContext(context)"
+              class="pointer ml-2"
+              nbTooltip="Delete this context"
+            ></nb-icon>
           </div>
         </nb-list-item>
       </nb-list>
@@ -82,7 +81,7 @@
 
     <div class="addContextButton">
       <button
-        *ngIf="contextsPanelDisplayed"
+        *ngIf="!isReadonly && contextsPanelDisplayed"
         nbButton
         size="tiny"
         fullWidth
@@ -103,6 +102,7 @@
       <div class="card-col">
         <scenario-conception-item
           *ngIf="scenario?.data.scenarioItems.length"
+          [isReadonly]="isReadonly"
           [itemId]="0"
           [scenarioItems]="scenario.data.scenarioItems"
           [contexts]="scenario.data.contexts"
