feat(scenario-designer): Check of deleted intents on scenario load

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
@@ -12,7 +12,8 @@
       status="basic"
       (click)="exit()"
     >
-      Cancel
+      <span *ngIf="!isReadonly">Cancel</span>
+      <span *ngIf="isReadonly">Exit</span>
     </button>
     <button
       *ngIf="!isReadonly"
