--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
@@ -48,25 +48,36 @@
         </div>
       </ng-container>
 
-      <div
-        *ngIf="dependencies.answersToCreate.length"
-        class="mt-3"
+      <ng-container
+        *ngFor="let answerJobsType of [dependencies.answersToCreate, dependencies.answersToUpdate]"
       >
-        <h5>The {{ dependencies.answersToCreate.length }} following answers will be created</h5>
-        <div class="row">
-          <div
-            *ngFor="let answer of dependencies.answersToCreate"
-            class="col-12 col-md-6 mb-2 d-flex break-word"
-          >
-            <nb-icon
-              icon="checkmark-outline"
-              status="success"
-              *ngIf="answer.done"
-            ></nb-icon>
-            {{ answer.data.tickActionDefinition.answer }}
+        <div
+          *ngIf="answerJobsType.length"
+          class="mt-3"
+        >
+          <h5>
+            The <span *ngIf="answerJobsType.length > 1">{{ answerJobsType.length }}</span> following
+            answer<span *ngIf="answerJobsType.length > 1">s</span>
+            will be
+            <span *ngIf="getJobsType(answerJobsType) == 'creation'"> created </span>
+            <span *ngIf="getJobsType(answerJobsType) == 'update'"> updated </span>
+          </h5>
+
+          <div class="row">
+            <div
+              *ngFor="let answer of answerJobsType"
+              class="col-12 col-md-6 mb-2 d-flex break-word"
+            >
+              <nb-icon
+                icon="checkmark-outline"
+                status="success"
+                *ngIf="answer.done"
+              ></nb-icon>
+              {{ answer.data.tickActionDefinition.answer }}
+            </div>
           </div>
         </div>
-      </div>
+      </ng-container>
 
       <div
         *ngIf="!processingDependencies"
