feat(scenario-conception): improve camelCase. Display if contexts are fully used

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
@@ -50,6 +50,11 @@
                 class="ellipsis context-name"
                 [title]="context.name"
               >
+                <nb-icon
+                  icon="checkmark-outline"
+                  status="success"
+                  *ngIf="isContextUsed(context)"
+                ></nb-icon>
                 {{ context.name }}
               </div>
 
